--- a/src/components/postDetails/postDetails.module.css
+++ b/src/components/postDetails/postDetails.module.css
@@ -10,6 +10,7 @@
     margin-top: 1.5rem;
     display: flex;
     border: 1px solid #333;
+    border-radius: 10px;
 }
 
 .left{
@@ -80,7 +81,7 @@
     overflow-y: auto;
 }
 
-.noCommentsMsg{
+.noCommentMsg{
     margin: 2.5rem;
     text-align: center;
     font-size: 26px;
