--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,12 @@
     scroll-behavior:smooth;
 }
 
-.App {
+/* .App {
     overflow: hidden;
     color: #242d49;
     background: #f3f3f3;
    
-  }
+  } */
 .blur {
     position: absolute;
     width: 22rem;
