--- a/src/components/profileCard/profileCard.module.css
+++ b/src/components/profileCard/profileCard.module.css
@@ -1,14 +1,16 @@
 .container{
     height:300px;
     width:110%;
-    border:1px solid #333;
+    /* border:1px solid #333; */
     border-radius:20px;
     display:flex;
     justify-content:center;
     flex-direction:column;
     background-color:#f4f4f4;
-   
+  
 
+
+    
 }
 
 .wrapper{
